# RustRigRagWithSurrealDBPoc

./: .env  .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  backup.sh  default.nix  docker-compose.yml  init_pdf_documents.json  queries.surql
src/: chunk_processor.rs  cli.rs  config.rs  constants.rs  lib.rs  main.rs  util.rs
src/rag_system/: mod.rs  rag_system.rs  structures.rs
src/sub_commands/: info.rs  init_documents.rs  init_pdf_documents.rs  init_schema.rs  mod.rs  query_pdf_documents.rs  query_sample_documents.rs
